--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
@@ -51,7 +51,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.google.firebase:firebase-analytics:17.4.3'
+    implementation "com.google.android.gms:play-services-auth:18.0.0"
     implementation 'com.facebook.android:facebook-android-sdk:4.0.0'
 
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    /*
+    RxJava, RxAndroid, RxBinding
+    */
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid"
+
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
