--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ allprojects {
 
 ext {
     lifecycle = "2.2.0"
+    rxandroid = "2.1.1"
+    rxjava = "2.2.12"
+    rxbinding = "3.0.0"
 }
 
 task clean(type: Delete) {
