working on location, jobs, user synchronization. and navigation bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".view.auth.AuthActivity" />
         <activity android:name=".view.main.MainActivity" />
         <activity
-            android:name=".view.jobs.newPostActivity"
+            android:name=".view.jobs.NewPostActivity"
             android:windowSoftInputMode="adjustPan" />
     </application>
 
