--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
 
     testImplementation 'junit:junit:4.13'
