--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ allprojects {
 ext {
     lifecycle = "2.2.0"
     rxandroid = "2.1.1"
-    rxjava = "2.2.12"
+    rxjava = '2.2.19'
     rxbinding = "3.0.0"
 }
 
